--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,10 @@
 app:
-  env: dev
-  port: 3000
+  port: 
   
 db:
-  db_host: localhost
-  db_port: 5432
-  username: soulisack
-  password: 77477686
-  db_name: godb
+  db_host: 
+  db_port: 
+  username: 
+  password: 
+  db_name: 
   
